swen430as2/tests/valid/unions/UnionType_Valid_09.while
type msgType1 is {int|int payload}
type msgType2 is {int payload}

msgType1 id(msgType2 x) {
  return x;
}

void main() {
     msgType1 m1 = {payload: 1};
     msgType2 m2 = {payload: 2};
     //
     assert id(m1).payload == 1;
     assert id(m2).payload == 2;
}
